<resources>
    <string name="app_name">Samples</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_world">Hello World</string>
    <string name="fragment">Fragment</string>
    <string name="list">List</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera</string>
    <string name="view_pager">View Pager</string>
</resources>