<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/helloWorld"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/hello_world"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/fragment"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/fragment"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/list"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/list"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/permissions"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/permissions"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/camera"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/camera"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>